Fixed linkedIn clipping on some sizes.

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -172,3 +172,7 @@ footer p {
         clear: both;
     }
 }
+
+.LI-badge {
+    min-height: 280px;
+}
